--- a/Spring/트랜잭션전파.md
+++ b/Spring/트랜잭션전파.md
@@ -1,1 +1,86 @@
 # 트랜잭션 전파
+트랜잭션을 각각 사용하는 것이 아니라, 트랜잭션이 이미 진행중인데, 추가로 트랜잭션을 수행하면 어떻게 될까?
+
+이런 경우 어떻게 동작할지 결정하는 것을 트랜잭션 전파(propagation)라 한다.
+
+- 외부 트랜잭션은 상대적으로 밖에 있기 때문에 외부 트랜잭션이라 한다. 처음 시작된 트랜잭션으로 이해하면 된다.
+- 내부 트랜잭션은 외부에 트랜잭션이 수행되고 있는 도중에 호출되기 때문에 마치 내부에 있는 것처럼 보여서 내부 트랜잭션이라 한다.
+  
+![image](https://github.com/hanuk96/TIL/assets/12428689/860dcc71-3903-4a50-85f8-441f604865ea)
+
+- 모든 논리 트랜잭션이 커밋되어야 물리 트랜잭션이 커밋된다.
+- 하나의 논리 트랜잭션이라도 롤백되면 물리 트랜잭션은 롤백된다
+
+![image](https://github.com/hanuk96/TIL/assets/12428689/ac73e109-8a65-41b2-9026-41baaade7b25)
+
+- 스프링은 이해를 돕기 위해 논리 트랜잭션과 물리 트랜잭션이라는 개념을 나눈다.
+- 논리 트랜잭션들은 하나의 물리 트랜잭션으로 묶인다.
+- 물리 트랜잭션은 실제 커넥션을 통해서 트랜잭션을 시작( setAutoCommit(false)) 하고, 실제 커넥션을 통해서 커밋, 롤백하는 단위이다.
+- 논리 트랜잭션은 트랜잭션 매니저를 통해 트랜잭션을 사용하는 단위이다.
+  
+![image](https://github.com/hanuk96/TIL/assets/12428689/6597f4a5-831e-4266-8ddf-9a8c622ee9fb)
+
+전파 속성이 required 일때
+
+```java
+@Autowired
+PlatformTransactionManager txManager;
+
+void inner_commit() {
+    log.info("외부 트랜잭션 시작");
+    TransactionStatus outer = txManager.getTransaction(new DefaultTransactionAttribute());
+    log.info("outer.isNewTransaction()={}", outer.isNewTransaction());
+
+    log.info("내부 트랜잭션 시작");
+    TransactionStatus inner = txManager.getTransaction(new DefaultTransactionAttribute());
+    log.info("inner.isNewTransaction()={}", inner.isNewTransaction());
+    log.info("내부 트랜잭션 커밋");
+    txManager.commit(inner);
+
+    log.info("외부 트랜잭션 커밋");
+    txManager.commit(outer);
+}
+```
+
+실행결과
+
+```
+외부 트랜잭션 시작
+Creating new transaction with name [null]: PROPAGATION_REQUIRED,ISOLATION_DEFAULT
+Acquired Connection [HikariProxyConnection@1943867171 wrapping conn0] for JDBC transaction
+Switching JDBC Connection [HikariProxyConnection@1943867171 wrapping conn0] to manual commit
+outer.isNewTransaction()=true
+내부 트랜잭션 시작
+Participating in existing transaction
+inner.isNewTransaction()=false
+내부 트랜잭션 커밋
+외부 트랜잭션 커밋
+Initiating transaction commit
+Committing JDBC transaction on Connection [HikariProxyConnection@1943867171 wrapping conn0]
+```
+
+외부 트랜잭션만 커밋을 하고 내부 트랜잭션은 커밋하지 않은 모습을 볼 수 있다.
+
+스프링은 이렇게 여러 트랜잭션이 함께 사용되는 경우, 처음 트랜잭션을 시작한 외부 트랜잭션이 실제 물리 트랜잭션을 관리하도록 한다.
+
+요청
+
+![image](https://github.com/hanuk96/TIL/assets/12428689/8cc4e9a6-83ce-4217-a95a-8c0572774c12)
+
+응답 - 신규 트랜잭션여부에따라 커밋을 호출할지를 결정한다. 여기서는 외부 트랜잭션이 신규 트랜잭션이기 때문에 커밋되지 않
+
+![image](https://github.com/hanuk96/TIL/assets/12428689/6ec54aa5-980d-4e53-ade2-fc4c8badd4ea)
+
+### 내부 트랜잭션 롤백시
+
+![image](https://github.com/hanuk96/TIL/assets/12428689/c2b97736-f3d2-474e-ad30-4cd2de230ff9)
+
+응답 
+- 신규 트랜잭션이 아니기 때문에 실제 롤백을 호출하지 않는다.
+- 아직 트랜잭션이 끝난 것이 아니기 때문에 실제 롤백을 호출하면 안된다. 외부 트랜잭션이 종료될 때까지 진행되어야한다.
+- 내부 트랜잭션은 물리 트랜잭션을 롤백하지 않는 대신에 트랜잭션 동기화 매니저에 rollbackOnly=true 라는 표시를 해둔다.
+
+- 신규 트랜잭션인 외부 트랜잭션을 커밋할 때 롤백 전용 마크를 확인한다.
+- 롤백 전용 마크가 표시되어 있으면 물리 트랜잭션을 롤백하고, UnexpectedRollbackException 예외를 던진다.
+
+![image](https://github.com/hanuk96/TIL/assets/12428689/32682c79-dc5a-4cf3-a52d-3b96093ab6cf)
