--- a/Spring/트랜잭션전파.md
+++ b/Spring/트랜잭션전파.md
@@ -79,8 +79,98 @@ Committing JDBC transaction on Connection [HikariProxyConnection@1943867171 wrap
 - 신규 트랜잭션이 아니기 때문에 실제 롤백을 호출하지 않는다.
 - 아직 트랜잭션이 끝난 것이 아니기 때문에 실제 롤백을 호출하면 안된다. 외부 트랜잭션이 종료될 때까지 진행되어야한다.
 - 내부 트랜잭션은 물리 트랜잭션을 롤백하지 않는 대신에 트랜잭션 동기화 매니저에 rollbackOnly=true 라는 표시를 해둔다.
-
 - 신규 트랜잭션인 외부 트랜잭션을 커밋할 때 롤백 전용 마크를 확인한다.
 - 롤백 전용 마크가 표시되어 있으면 물리 트랜잭션을 롤백하고, UnexpectedRollbackException 예외를 던진다.
 
 ![image](https://github.com/hanuk96/TIL/assets/12428689/32682c79-dc5a-4cf3-a52d-3b96093ab6cf)
+
+내부 트랜잭션이 한개만 롤백이 된 상황 
+
+```java
+@Test
+void recoverException_fail() {
+    //given
+    String username = "로그예외_recoverException_fail";
+
+    //when
+    assertThatThrownBy(() -> memberService.joinV2(username))
+            .isInstanceOf(UnexpectedRollbackException.class);
+
+    //when: 모든 데이터가 롤백된다.
+    assertTrue(memberRepository.find(username).isEmpty());
+    assertTrue(logRepository.find(username).isEmpty());
+}
+```
+
+memberRepository에 member 저장 -> logRepository에 logMessage 저장(이때 exception 발생)
+
+```java
+@Transactional
+public void joinV2(String username) {
+    Member member = new Member(username);
+    Log logMessage = new Log(username);
+
+    log.info("== memberRepository 호출 시작 ==");
+    memberRepository.save(member);
+    log.info("== memberRepository 호출 종료 ==");
+
+    log.info("== logRepository 호출 시작 ==");
+    try {
+        logRepository.save(logMessage);
+    } catch (RuntimeException e) {
+        log.info("log 저장에 실패했습니다. logMessage={}", logMessage.getMessage());
+        log.info("정상 흐름 반환");
+    }
+    log.info("== logRepository 호출 종료 ==");
+}
+```
+
+- memberRepository는 문제 없음음
+- logRepository는 롤백 -> TransactionSynchronizationManger에 rollback 마크
+- 전체 물리 트랜잭션 롤백됨
+
+```java
+@Slf4j
+@Repository
+@RequiredArgsConstructor
+public class MemberRepository {
+    private final EntityManager em;
+
+    @Transactional
+    public void save(Member member) {
+        log.info("member 저장");
+        em.persist(member);
+    }
+
+    public Optional<Member> find(String username) {
+        return em.createQuery("select m from Member m where m.username = :username", Member.class)
+                .setParameter("username", username)
+                .getResultList().stream().findAny();
+    }
+}
+
+@Slf4j
+@Repository
+@RequiredArgsConstructor
+public class LogRepository {
+    private final EntityManager em;
+
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public void save(Log logMessage) {
+        log.info("log 저장");
+        em.persist(logMessage);
+
+        if (logMessage.getMessage().contains("로그예외")) {
+            log.info("log 저장시 예외 발생");
+            throw new RuntimeException("예외 발생");
+        }
+
+    }
+
+    public Optional<Log> find(String message) {
+        return em.createQuery("select l from Log l where l.message = :message", Log.class)
+                .setParameter("message", message)
+                .getResultList().stream().findAny();
+    }
+}
+```
