--- a/Spring/트랜잭션전파.md
+++ b/Spring/트랜잭션전파.md
@@ -67,7 +67,7 @@ Committing JDBC transaction on Connection [HikariProxyConnection@1943867171 wrap
 
 ![image](https://github.com/hanuk96/TIL/assets/12428689/8cc4e9a6-83ce-4217-a95a-8c0572774c12)
 
-응답 - 신규 트랜잭션여부에따라 커밋을 호출할지를 결정한다. 여기서는 외부 트랜잭션이 신규 트랜잭션이기 때문에 커밋되지 않
+응답 - 신규 트랜잭션여부에따라 커밋을 호출할지를 결정한다. 여기서는 외부 트랜잭션이 신규 트랜잭션이기 때문에 커밋되지 않는다.
 
 ![image](https://github.com/hanuk96/TIL/assets/12428689/6ec54aa5-980d-4e53-ade2-fc4c8badd4ea)
 
