--- a/refactoring/긴 함수.md
+++ b/refactoring/긴 함수.md
@@ -1,1 +1,322 @@
 # 긴 함수
+짧은 함수 vs 긴 함수
+
+- 함수가 길수록 더 이해하기 어렵다. vs 짧은 함수는 더 많은 문맥 전환을 필요로 한다. 
+- 작은 함수에 "좋은이름"을 사용했다면 해당 함수의 코드를 보지 않고도 이해할 수 있다. 
+- 어떤 코드에 "주석"을 남기고 싶다면, 최대한 주석 대신 함수를 만들고 함수의 이름으로 "의도"를 표현해보자.
+- 함수를 추출하여 대부분 해결할 수 있다. 
+
+### 임시 변수를 질의 함수로 바꾸기
+
+긴 함수를 리팩토링할 때, 그러한 임시 변수를 함수로 추출하여 분리한다면 빼낸 함수로 전달해야 할 매개변수를 줄일 수 있다.
+
+before
+
+```java
+...
+try (FileWriter fileWriter = new FileWriter("participants.md");
+    PrintWriter writer = new PrintWriter(fileWriter)) {
+    participants.sort(Comparator.comparing(Participant::username));
+
+    writer.print(header(totalNumberOfEvents, participants.size()));
+
+    participants.forEach(p -> {
+        long count = p.homework().values().stream()
+                .filter(v -> v == true)
+                .count();
+        double rate = count * 100 / totalNumberOfEvents;
+
+        String markdownForHomework = String.format("| %s %s | %.2f%% |\n", p.username(), checkMark(p, totalNumberOfEvents), rate);
+        writer.print(markdownForHomework);
+    });
+}
+...
+```
+
+after - rate라는 매개변수를 없애고 함수로 변환, 주석 없이 함수의 이름으로 의도를 표현 
+
+```java
+...
+try (FileWriter fileWriter = new FileWriter("participants.md");
+    PrintWriter writer = new PrintWriter(fileWriter)) {
+    participants.sort(Comparator.comparing(Participant::username));
+
+    writer.print(header(totalNumberOfEvents, participants.size()));
+
+    participants.forEach(p -> {
+        String markdownForHomework = getMarkdownForHomework(totalNumberOfEvents, p);
+        writer.print(markdownForHomework);
+    });
+}
+...
+
+private double getRate(int totalNumberOfEvents, Participant p) {
+    long count = p.homework().values().stream()
+            .filter(v -> v == true)
+            .count();
+
+    double rate = count * 100 / totalNumberOfEvents;
+    return rate;
+}
+
+private String getMarkdownForHomework(int totalNumberOfEvents, Participant p) {
+    return String.format("| %s %s | %.2f%% |\n", p.username(), checkMark(p, totalNumberOfEvents), getRate(totalNumberOfEvents, p));
+}
+```
+
+### 매개변수 객체 만들기
+같은 매개변수들이 여러 메소드에 걸쳐 나타난다면 그 매개변수들을 묶은 자료 구조를 만들 수 있다. 
+
+- 해당 데이터간의 관계를 보다 명시적으로 나타낼 수 있다. 
+- 함수에 전달할 매개변수 개수를 줄일 수 있다. 
+- 도메인을 이해하는데 중요한 역할을 하는 클래스로 발전할 수도 있다
+
+인텔리제이 단축키 
+
+- refactor -> introduce parameter object
+- refactor -> introduce field
+
+### 객체 통째로 넘기기
+- 어떤 한 레코드에서 구할 수 있는 여러 값들을 함수에 전달하는 경우, 해당 매개변수를 레코드 하나로 교체할 수 있다. 
+- 매개변수 목록을 줄일 수 있다.
+
+before
+
+```java
+participants.forEach(p -> {
+    String markdownForHomework = getMarkdownForParticipant(p.username(), p.homework());
+    writer.print(markdownForHomework);
+});
+```
+
+after
+
+```java
+participants.forEach(p -> {
+    String markdownForHomework = getMarkdownForParticipant(p);
+    writer.print(markdownForHomework);
+});
+```
+
+### 함수를 명령으로 바꾸기
+- 함수를 독립적인 객체인, Command로 만들어 사용할 수 있다. 
+- 상속이나 템플릿을 활용할 수도 있다. 
+- 대부분의 경우에 "커맨드" 보다는 "함수"를 사용하지만, 커맨드 말고 다른 방법이 없는 경우에만 사용한다.
+
+before 복잡한 기능들이 원래는 있었을 것이다.
+
+```java
+public class Calculator {
+    public int add(int a, int b) {
+        return a + b;
+    }
+}
+```
+
+after - 사용자는 executer를 이용하기만 하면 됨
+
+```java
+public interface Command {
+    void execute();
+}
+
+public class AddCommand implements Command {
+    private final Calculator calculator;
+    private final int a;
+    private final int b;
+    private int result;
+
+    public AddCommand(Calculator calculator, int a, int b) {
+        this.calculator = calculator;
+        this.a = a;
+        this.b = b;
+    }
+
+    @Override
+    public void execute() {
+        result = calculator.add(a, b);
+    }
+
+    public int getResult() {
+        return result;
+    }
+}
+
+public class Calculator {
+    public int add(int a, int b) {
+        return a + b;
+    }
+}
+```
+
+### 조건문 분해하기 
+- 기술적으로는 “함수 추출하기”와 동일한 리팩토링이지만 의도만 다를 뿐이다.
+
+before
+
+```java
+if (participants.stream().noneMatch(p -> p.username().equals(username))) {
+    participant = new Participant(username);
+    participants.add(participant);
+} else {
+    participant = participants.stream().filter(p -> p.username().equals(username)).findFirst().orElseThrow();
+}
+```
+
+after - 조건문에서 삼항연산자로 변함, 메서드의 이름을 통해 어떤 역할을 하는지 보기 편해짐
+
+```java
+return isNewParticipant(username, participants) ? createNewParticipant(username, participants) : fintExistingPartcipant(username, participants);
+
+
+private Participant createNewParticipant(String username, List<Participant> participants) {
+    Participant participant;
+    participant = new Participant(username);
+    participants.add(participant);
+    return participant;
+}
+
+private Participant fintExistingPartcipant(String username, List<Participant> participants) {
+    Participant participant;
+    participant = participants.stream().filter(p -> p.username().equals(username)).findFirst().orElseThrow();
+    return participant;
+}
+
+private boolean isNewParticipant(String username, List<Participant> participants) {
+    return participants.stream().noneMatch(p -> p.username().equals(username));
+}
+```
+
+### 반복문 쪼개기
+- 하나의 반복문에서 여러 다른 작업을 하는 코드를 쉽게 찾아볼 수 있다. 
+- 해당 반복문을 수정할 때 여러 작업을 모두 고려하며 코딩을 해야한다.
+
+before
+
+```java
+GHIssue issue = ghRepository.getIssue(eventId);
+List<GHIssueComment> comments = issue.getComments();
+
+for (GHIssueComment comment : comments) {
+    Participant participant = findParticipant(comment.getUserName(), participants);
+    participant.setHomeworkDone(eventId);
+
+    if (firstCreatedAt == null || comment.getCreatedAt().before(firstCreatedAt)) {
+        firstCreatedAt = comment.getCreatedAt();
+        first = participant;
+    }
+}
+```
+
+after - 성능이 안좋아질 수 있지만 이런식으로 반복문도 쪼갬
+
+```java
+GHIssue issue = ghRepository.getIssue(eventId);
+List<GHIssueComment> comments = issue.getComments();
+
+checkHomework(comments, eventId);
+firstParticipantsForEachEvent[eventId - 1] = findFirst(comments);
+
+private Participant findFirst(List<GHIssueComment> comments) throws IOException {
+    Date firstCreatedAt = null;
+    Participant first = null;
+
+    for (GHIssueComment comment : comments) {
+        Participant participant = findParticipant(comment.getUserName(), participants);
+
+        if (firstCreatedAt == null || comment.getCreatedAt().before(firstCreatedAt)) {
+            firstCreatedAt = comment.getCreatedAt();
+            first = participant;
+        }
+    }
+    return first;
+}
+
+private void checkHomework(List<GHIssueComment> comments, int eventId) {
+    for (GHIssueComment comment : comments) {
+        Participant participant = findParticipant(comment.getUserName(), participants);
+        participant.setHomeworkDone(eventId);
+    }
+}
+```
+
+### 반복문 쪼개기
+- 반복되는 switch문(책, 음악, 음식 등…) 을 각각 다른 클래스를 만들어 제거할 수 있다. 
+- 공통으로 사용되는 로직은 상위클래스에 두고 달라지는 부분만 강조할 수 있다.
+
+before
+
+```java
+public class Shape {
+    private String type;
+
+    public Shape(String type) {
+        this.type = type;
+    }
+
+    public void draw() {
+        if (type.equals("circle")) {
+            drawCircle();
+        } else if (type.equals("square")) {
+            drawSquare();
+        } else if (type.equals("triangle")) {
+            drawTriangle();
+        } else {
+            System.out.println("Unknown shape");
+        }
+    }
+
+    private void drawCircle() {
+        System.out.println("Drawing a circle");
+    }
+
+    private void drawSquare() {
+        System.out.println("Drawing a square");
+    }
+
+    private void drawTriangle() {
+        System.out.println("Drawing a triangle");
+    }
+}
+```
+
+after
+
+```java
+public abstract class Shape {
+    public abstract void draw();
+}
+
+public class Circle extends Shape {
+    @Override
+    public void draw() {
+        System.out.println("Drawing a circle");
+    }
+}
+
+public class Square extends Shape {
+    @Override
+    public void draw() {
+        System.out.println("Drawing a square");
+    }
+}
+
+public class Triangle extends Shape {
+    @Override
+    public void draw() {
+        System.out.println("Drawing a triangle");
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Shape circle = new Circle();
+        Shape square = new Square();
+        Shape triangle = new Triangle();
+
+        circle.draw();
+        square.draw();
+        triangle.draw();
+    }
+}
+```
