--- a/refactoring/긴매개변수목록.md
+++ b/refactoring/긴매개변수목록.md
@@ -1,1 +1,111 @@
 # 긴 매개변수 목록
+- 어떤 함수에 매개변수가 많을수록 함수의 역할을 이해하기 어려워진다. 
+
+### 매개변수를 질의 함수로 바꾸기
+- 함수의 매개변수 목록은 짧을수록 이해하기 좋다. 
+- 가능하면 함수를 호출하는 쪽의 책임을 줄이고 함수 내부에서 책임지도록 노력한다. 
+
+before
+
+```java
+public class Order {
+    private int quantity;
+    private double itemPrice;
+
+    public Order(int quantity, double itemPrice) {
+        this.quantity = quantity;
+        this.itemPrice = itemPrice;
+    }
+
+    public double finalPrice() {
+        double basePrice = this.quantity * this.itemPrice;
+
+        //discountLevel을 호출하는 discountedPrice에서 이 변수를 책임지도록 리팩토링 해보자
+        int discountLevel = this.quantity > 100 ? 2 : 1;
+        return this.discountedPrice(basePrice, discountLevel);
+    }
+
+    private double discountedPrice(double basePrice, int discountLevel) {
+        return discountLevel == 2 ? basePrice * 0.9 : basePrice * 0.95;
+    }
+}
+```
+
+after
+
+```java
+public class Order {
+    private int quantity;
+    private double itemPrice;
+
+    public Order(int quantity, double itemPrice) {
+        this.quantity = quantity;
+        this.itemPrice = itemPrice;
+    }
+
+    public double finalPrice() {
+        double basePrice = this.quantity * this.itemPrice;
+        return this.discountedPrice(basePrice);
+    }
+
+    private int discountLevel() {
+        return this.quantity > 100 ? 2 : 1;
+    }
+
+    private double discountedPrice(double basePrice) {
+        return discountLevel() == 2 ? basePrice * 0.90 : basePrice * 0.95;
+    }
+}
+```
+
+### 플래그 인수 제거하기
+- 플래그는 보통 함수에 매개변수로 전달해서 함수 내부의 로직을 분기하는데 사용한다. 
+- 플래그가 너무 많으면 함수가 너무 많은일을 한다고 판단
+- 플래그를 사용한 함수는 차이를 파악하기 어렵다. 
+
+before
+
+```java
+public LocalDate deliveryDate(Order order, boolean isRush) {
+    if (isRush) {
+        int deliveryTime = switch (order.getDeliveryState()) {
+            case "WA", "CA", "OR" -> 1;
+            case "TX", "NY", "FL" -> 2;
+            default -> 3;
+        };
+        return order.getPlacedOn().plusDays(deliveryTime);
+    } else {
+        int deliveryTime = switch (order.getDeliveryState()) {
+            case "WA", "CA" -> 2;
+            case "OR", "TX", "NY" -> 3;
+            default -> 4;
+        };
+        return order.getPlacedOn().plusDays(deliveryTime);
+    }
+}
+```
+
+after - 플래그를 제거하니 함수의 역할이 명확해짐
+
+```java
+public LocalDate rushDeliveryDate(Order order) {
+    int deliveryTime = switch (order.getDeliveryState()) {
+        case "WA", "CA", "OR" -> 1;
+        case "TX", "NY", "FL" -> 2;
+        default -> 3;
+    };
+    return order.getPlacedOn().plusDays(deliveryTime);
+}
+
+public LocalDate regularDeliveryDate(Order order) {
+    int deliveryTime = switch (order.getDeliveryState()) {
+        case "WA", "CA" -> 2;
+        case "OR", "TX", "NY" -> 3;
+        default -> 4;
+    };
+    return order.getPlacedOn().plusDays(deliveryTime);
+}
+```
+
+### 여러 함수를 클래스로 묶기
+- 비슷한 매개변수 목록을 여러 함수에서 사용하고 있다면 해당 메소드를 모아서 클래스를 만들 수 있다. 
