--- a/refactoring/데이터.md
+++ b/refactoring/데이터.md
@@ -72,6 +72,46 @@ public class Thermostats {
 - 하지만 그밖의 프로그래밍 언어는 데이터 변경을 허용하고 있다. 따라서 변경되는 데이터 사용 시 발생할 수 있는 리스크를 관리할 수 있는 방법을 적용하는 것이 좋다.
 
 ### 변수 쪼개기
+여러 용도로 사용되는 변수는 분리해야 더 이해하기 좋은 코드를 만들 수 있다.
+
+before
+
+```java
+public class Rectangle {
+    private double perimeter;
+    private double area;
+
+    public void updateGeometry(double height, double width) {
+        double temp = 2 * (height + width);
+        System.out.println("Perimeter: " + temp);
+        perimeter = temp;
+
+        temp = height * width;
+        System.out.println("Area: " + temp);
+        area = temp;
+    }
+}
+```
+
+after
+
+```java
+public class Rectangle {
+
+    private double perimeter;
+    private double area;
+
+    public void updateGeometry(double height, double width) {
+        double perimeter = 2 * (height + width);
+        System.out.println("Perimeter: " + perimeter);
+        this.perimeter = perimeter;
+
+        area = height * width;
+        System.out.println("Area: " + area);
+        this.area = area;
+    }
+}
+```
 
 ### 질의 함수와 변경 함수 분리하기
 
