--- a/refactoring/이해하기힘든이름.md
+++ b/refactoring/이해하기힘든이름.md
@@ -2,8 +2,8 @@
 ### 함수 선언 변경하기
 함수의 매개변수
 
-• 함수 내부의 문맥을 결정한다. (예, 전화변호 포매팅) 
-• 의존성을 결정한다. (예, Payment 만기일 계산)
+- 함수 내부의 문맥을 결정한다. (예, 전화변호 포매팅) 
+- 의존성을 결정한다. (예, Payment 만기일 계산)
 
 intellij 단축키
 - refactor -> change signautre(접근지시자, 파라미터 등 변)
@@ -12,13 +12,13 @@ intellij 단축키
 ### 변수 이름 바꾸기
 더 많이 사용되는 변수일수록 그 이름이 더 중요하다.
 
-• 람다식에서 사용하는 변수 vs 함수의 매개변수
-• 다이나믹 타입을 지원하는 언어에서는 타입을 이름에 넣기도 한다. 
-• 여러 함수에 걸쳐 쓰이는 필드 이름에는 더 많이 고민하고 이름을 짓는다
+- 람다식에서 사용하는 변수 vs 함수의 매개변수
+- 다이나믹 타입을 지원하는 언어에서는 타입을 이름에 넣기도 한다. 
+- 여러 함수에 걸쳐 쓰이는 필드 이름에는 더 많이 고민하고 이름을 짓는다
 
 ### 필드 이름 바꾸기
 필드 이름은 프로그램 전반에 걸쳐 참조될 수 있기 때문에 중요하다.
 
-• Record 자료 구조: 특정 데이터와 관련있는 필드를 묶어놓은 자료 구조
-• 자바 14 버전부터 지원. (record 키워드) 
-• 자바에서는 Getter와 Setter 메소드 이름도 필드의 이름과 비슷하게 간주할 수 있다.
+- Record 자료 구조: 특정 데이터와 관련있는 필드를 묶어놓은 자료 구조
+- 자바 14 버전부터 지원. (record 키워드) 
+- 자바에서는 Getter와 Setter 메소드 이름도 필드의 이름과 비슷하게 간주할 수 있다.
