--- a/refactoring/데이터.md
+++ b/refactoring/데이터.md
@@ -72,7 +72,8 @@ public class Thermostats {
 - 하지만 그밖의 프로그래밍 언어는 데이터 변경을 허용하고 있다. 따라서 변경되는 데이터 사용 시 발생할 수 있는 리스크를 관리할 수 있는 방법을 적용하는 것이 좋다.
 
 ### 변수 쪼개기
-여러 용도로 사용되는 변수는 분리해야 더 이해하기 좋은 코드를 만들 수 있다.
+- 여러 용도로 사용되는 변수는 분리해야 더 이해하기 좋은 코드를 만들 수 있다.
+- 상수를 활용하자.(자바의 final)
 
 before
 
@@ -102,11 +103,11 @@ public class Rectangle {
     private double area;
 
     public void updateGeometry(double height, double width) {
-        double perimeter = 2 * (height + width);
+        final double perimeter = 2 * (height + width);
         System.out.println("Perimeter: " + perimeter);
         this.perimeter = perimeter;
 
-        area = height * width;
+        final area = height * width;
         System.out.println("Area: " + area);
         this.area = area;
     }
@@ -114,11 +115,97 @@ public class Rectangle {
 ```
 
 ### 질의 함수와 변경 함수 분리하기
+- 명령-조회 분리 (command-query separation) 규칙: 어떤 값을 리턴하는 함수는 사이드 이팩트가 없어야 한다.(조회시)
+- CQRS
+
+before
+
+```java
+public double getTotalOutstandingAndSendBill() {
+        double result = customer.getInvoices().stream()
+                .map(Invoice::getAmount)
+                .reduce((double) 0, Double::sum);
+        sendBill();
+        return result;
+    }
+
+    private void sendBill() {
+        emailGateway.send(formatBill(customer));
+    }
+```
+
+after
+
+```java
+    public double totalOutStatnding() {
+        return customer.getInvoices().stream()
+                .map(Invoice::getAmount)
+                .reduce((double) 0, Double::sum);
+    }
+
+    public void sendBill() {
+        emailGateway.send(formatBill(customer));
+    }
+```
 
 ### 세터 제거하기
+- 객체 생성시 처음 설정된 값이 변경될 필요가 없다면, 값을 설정할 수 있는 생성자를 만들고 세터를 제거해서 변경될 수 있는 가능성을 제거해야 한다.
+- 데이터 저장시 사용되는 entity의 경우엔 혹시 모를 human error를 막기위해 적용하는것이 좋을것 같다.
 
 ### 파생변수를 질의 함수로 바꾸기
+- 계산해서 알아낼 수 있는 변수는 제거할 수 있다. 
+- 계산 자체가 데이터의 의미를 잘 표현하는 경우도 있다. 
+- 해당 변수가 어디선가 잘못된 값으로 수정될 수 있는 가능성을 제거할 수 있다. 
+
+before
+
+```java
+public class Discount {
+
+    private double discountedTotal;
+    private double discount;
+    private double baseTotal;
+
+    public Discount(double baseTotal) {
+        this.baseTotal = baseTotal;
+    }
+
+    public double getDiscountedTotal() {
+        return this.discountedTotal;
+    }
+
+    public void setDiscount(double number) {
+        this.discount = number;
+        this.discountedTotal = this.baseTotal - this.discount;
+    }
+}
+```
+
+after - 계산된 변수 자체를 제거
+
+```java
+public class Discount {
+    private double discount;
+    private double baseTotal;
+
+    public Discount(double baseTotal) {
+        this.baseTotal = baseTotal;
+    }
+
+    public double getDiscountedTotal() {
+        return this.baseTotal - this.discount;
+    }
+
+    public void setDiscount(double number) {
+        this.discount = number;
+    }
+}
+```
 
 ### 여러 함수를 변환 함수로 묶기
+- 변환 함수를 사용해서 불변 데이터의 필드로 생성해 두고 재사용할 수도 있다.
 
 ### 참조를 값으로 바꾸기
+- 값 객체는 객체가 가진 필드의 값으로 동일성을 확인한다. 
+- 값 객체는 변하지 않는다. 
+- 어떤 객체의 변경 내역을 다른 곳으로 전파시키고 싶다면 레퍼런스, 아니라면 값 객체를 사용한다.(java 14버전이후부터는 record 이용)
