--- a/refactoring/뒤엉킨 변경.md
+++ b/refactoring/뒤엉킨 변경.md
@@ -1,1 +1,4 @@
 # 뒤엉킨 변경
+- 좋은 코드는 비슷한 역할을 하는 응집도는 높고 각 모듈간 의존성은 낮은 코드이다.
+- 서로 다른 문제는 서로 다른 모듈에서 해결해야 한다. 
+- 모듈의 책임이 분리되어 있을수록 해당 문맥을 더 잘 이해할 수 있으며 다른 문제는 신경쓰지 않아도 된다. 
