--- a/refactoring/뒤엉킨 변경.md
+++ b/refactoring/뒤엉킨 변경.md
@@ -1,4 +1,244 @@
 # 뒤엉킨 변경
-- 좋은 코드는 비슷한 역할을 하는 응집도는 높고 각 모듈간 의존성은 낮은 코드이다.
+- 좋은 코드는 비슷한 역할의 응집도는 높고 각 모듈간 의존성은 낮은 코드이다.
 - 서로 다른 문제는 서로 다른 모듈에서 해결해야 한다. 
 - 모듈의 책임이 분리되어 있을수록 해당 문맥을 더 잘 이해할 수 있으며 다른 문제는 신경쓰지 않아도 된다. 
+
+### 단계 쪼개기
+- 서로 다른 일을 하는 코드를 각기 다른 모듈로 분리한다. 
+- 그래야 변경해야 할 때, 변경하는 것과 관련있는 것만 신경쓸 수 있다.
+
+before
+
+```java
+public double priceOrder(Product product, int quantity, ShippingMethod shippingMethod) {
+        final double basePrice = product.basePrice() * quantity;
+        final double discount = Math.max(quantity - product.discountThreshold(), 0)
+                * product.basePrice() * product.discountRate();
+
+        final double shippingPerCase = (basePrice > shippingMethod.discountThreshold()) ?
+                shippingMethod.discountedFee() : shippingMethod.feePerCase();
+        final double shippingCost = quantity * shippingPerCase;
+        final double price = basePrice - discount + shippingCost;
+        return price;
+    }
+```
+
+after
+
+```java
+public double priceOrder(Product product, int quantity, ShippingMethod shippingMethod) {
+        final PriceData priceData = calculatePriceData(product, quantity);
+        return applyShipping(priceData, shippingMethod);
+    }
+
+    private PriceData calculatePriceData(Product product, int quantity) {
+        final double basePrice = product.basePrice() * quantity;
+        final double discount = Math.max(quantity - product.discountThreshold(), 0)
+                * product.basePrice() * product.discountRate(basePrice, discount, quantity);
+        final PriceData priceData = new PriceData();
+        return priceData;
+    }
+
+    private double applyShipping(PriceData priceData, ShippingMethod shippingMethod) {
+        final double shippingPerCase = (priceData.basePrice() > shippingMethod.discountThreshold()) ?
+                shippingMethod.discountedFee() : shippingMethod.feePerCase();
+        final double shippingCost = priceData.quantity() * shippingPerCase;
+        final double price = priceData.basePrice() - priceData.discount() + shippingCost;
+        return price;
+    }
+```
+
+### 함수 옮기기
+- 관련있는 함수나 필드가 모여있어야 더 쉽게 찾고 이해할 수 있다. 
+- 해당 함수가 다른 문맥 (클래스)에 있는 데이터 (필드)를 더 많이 참조하는 경우 옮기는 것이 좋다.
+
+인텔리제이 단축키
+- refactor -> move instance method
+
+before
+
+```java
+public class Account {
+    private int daysOverdrawn;
+    private AccountType type;
+
+    public Account(int daysOverdrawn, AccountType type) {
+        this.daysOverdrawn = daysOverdrawn;
+        this.type = type;
+    }
+
+    private int daysOverdrawn() {
+        return this.daysOverdrawn;
+    }
+
+    //다른 역할을 하는 함수로 보임
+    private double overdraftCharge() {
+        if (this.type.isPremium()) {
+            final int baseCharge = 10;
+
+            //daysOverdrawn의 경우에도 파라미터로 넘겨서 리팩토링 가능할것 같음
+            if (this.daysOverdrawn <= 7) {
+                return baseCharge;
+            } else {
+                return baseCharge + (this.daysOverdrawn - 7) * 0.85;
+            }
+        } else {
+            return this.daysOverdrawn * 1.75;
+        }
+    }
+}
+
+
+public class AccountType {
+    private boolean premium;
+
+    public AccountType(boolean premium) {
+        this.premium = premium;
+    }
+
+    public boolean isPremium() {
+        return this.premium;
+    }
+}
+```
+
+after
+
+```java
+public class Account {
+    private int daysOverdrawn;
+    private AccountType type;
+
+    public Account(int daysOverdrawn, AccountType type) {
+        this.daysOverdrawn = daysOverdrawn;
+        this.type = type;
+    }
+
+    private int daysOverdrawn() {
+        return this.daysOverdrawn;
+    }    
+}
+
+public class AccountType {
+    private boolean premium;
+
+    public AccountType(boolean premium) {
+        this.premium = premium;
+    }
+
+    public boolean isPremium() {
+        return this.premium;
+    }
+
+    public double overdraftCharge(int daysOverdrawn) {
+        if (this.type.isPremium()) {
+            final int baseCharge = 10;
+            if (daysOverdrawn <= 7) {
+                return baseCharge;
+            } else {
+                return baseCharge + (daysOverdrawn - 7) * 0.85;
+            }
+        } else {
+            return daysOverdrawn * 1.75;
+        }
+    }
+}
+```
+
+### 클래스 추출하기
+- 클래스가 다루는 책임이 많아질수록 클래스가 점차 커진다. 
+- 데이터나 메소드 중 일부가 매우 밀접한 관련이 있는 경우에 하위 클래스를 만들어 책임을 분산 시킬 수도 있다.
+
+before
+
+```java
+public class Person {
+    private String name;
+    private String officeAreaCode;
+    private String officeNumber;
+
+    public String telephoneNumber() {
+        return this.officeAreaCode + " " + this.officeNumber;
+    }
+
+    public String name() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String officeAreaCode() {
+        return officeAreaCode;
+    }
+
+    public void setOfficeAreaCode(String officeAreaCode) {
+        this.officeAreaCode = officeAreaCode;
+    }
+
+    public String officeNumber() {
+        return officeNumber;
+    }
+
+    public void setOfficeNumber(String officeNumber) {
+        this.officeNumber = officeNumber;
+    }
+}
+```
+
+after
+
+```java
+public class Person {
+    private final TelephoneNumber telephoneNumber;
+    private String name;
+
+    public Person(TelephoneNumber telephoneNumber, String name) {
+        this.telephoneNumber = telephoneNumber;
+        this.name = name;
+    }
+
+    public String telephoneNumber() {
+        return this.telephoneNumber.toString();
+    }
+
+    public String name() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+    
+    public TelephoneNumber getTelephoneNumber(){
+        return telephoneNumber;
+    }
+}
+
+public class TelephoneNumber {
+    private String areaCode;
+    private String number;
+
+    public TelephoneNumber(String officeAreaCode, String officeNumber) {
+        this.areaCode = officeAreaCode;
+        this.number = officeNumber;
+    }
+
+    public String getAreaCode() {
+        return areaCode;
+    }
+
+    public void setAreaCode(String areaCode) {
+        this.areaCode = areaCode;
+    }
+
+    public String getNumber() {
+        return number;
+    }
+
+    public void setNumber(String number) {
+        this.number = number;
+    }
+}
+```
