--- a/refactoring/산탄총수술.md
+++ b/refactoring/산탄총수술.md
@@ -1,1 +1,7 @@
 # 산탄총 수술
+- 어떤 한 변경 사항이 생겼을 때 여러 모듈을 (여러 함수 또는 여러 클래스를) 수정해야 하는 상황이다.
+- 변경 사항이 여러곳에 흩어진다면 찾아서 고치기도 어렵고 중요한 변경 사항을 놓칠 수 있는 가능성도 생긴다.
+
+### 필드 옮기기
+### 함수 인라인
+### 클래스 인라인
