--- a/refactoring/산탄총수술.md
+++ b/refactoring/산탄총수술.md
@@ -3,5 +3,227 @@
 - 변경 사항이 여러곳에 흩어진다면 찾아서 고치기도 어렵고 중요한 변경 사항을 놓칠 수 있는 가능성도 생긴다.
 
 ### 필드 옮기기
+- 처음에는 타당해 보였던 설계적인 의사 결정도 프로그램이 다루고 있는 도메인과 데이터 구조에 대해 더 많이익혀나가면서, 틀린 의사 결정으로 바뀌는 경우도 있다. 
+
+before
+
+```java
+public class Customer {
+    private String name;
+    private double discountRate;
+    private CustomerContract contract;
+
+    public Customer(String name, double discountRate) {
+        this.name = name;
+        this.discountRate = discountRate;
+        this.contract = new CustomerContract(dateToday());
+    }
+
+    public double getDiscountRate() {
+        return discountRate;
+    }
+
+    public void becomePreferred() {
+        this.discountRate += 0.03;
+    }
+
+    public double applyDiscount(double amount) {
+        BigDecimal value = BigDecimal.valueOf(amount);
+        return value.subtract(value.multiply(BigDecimal.valueOf(this.discountRate))).doubleValue();
+    }
+
+    private LocalDate dateToday() {
+        return LocalDate.now();
+    }
+}
+
+public class CustomerContract {
+    private LocalDate startDate;
+
+    public CustomerContract(LocalDate startDate, double discountRate) {
+        this.startDate = startDate;
+    }
+}
+```
+
+after
+
+```java
+public class Customer {
+    private String name;
+    private CustomerContract contract;
+
+    public Customer(String name, double discountRate) {
+        this.name = name;
+        this.contract = new CustomerContract(dateToday(), discountRate);
+    }
+
+    public void setDiscountRate(double discountRate) {
+        this.contract.setDiscountRate(discountRate);
+    }
+
+    public double getDiscountRate() {
+        return this.contract.getDiscountRate();
+    }
+
+    public void becomePreferred() {
+        this.setDiscountRate(this.getDiscountRate() + 0.03);
+    }
+
+    public double applyDiscount(double amount) {
+        BigDecimal value = BigDecimal.valueOf(amount);
+        return value.subtract(value.multiply(BigDecimal.valueOf(this.getDiscountRate()))).doubleValue();
+    }
+
+    private LocalDate dateToday() {
+        return LocalDate.now();
+    }
+}
+
+public class CustomerContract {
+    private LocalDate startDate;
+    private double discountRate;
+
+    public CustomerContract(LocalDate startDate, double discountRate) {
+        this.startDate = startDate;
+    }
+
+    public LocalDate getStartDate() {
+        return startDate;
+    }
+
+    public void setStartDate(LocalDate startDate) {
+        this.startDate = startDate;
+    }
+
+    public double getDiscountRate() {
+        return discountRate;
+    }
+
+    public void setDiscountRate(double discountRate) {
+        this.discountRate = discountRate;
+    }
+}
+```
+
 ### 함수 인라인
+- 함수 이름으로 의도를 표현하는 방법이다. 
+- 함수 본문이 함수이름만큼 또는 그보다 더 잘 의도를 표현하는 경우도 있다.
+
+인텔리제이 단축키
+- refactor -> inline method
+
+before
+
+```java
+public class Rating {
+    public int rating(Driver driver) {
+        return moreThanFiveLateDeliveries(driver) ? 2 : 1;
+    }
+
+    private boolean moreThanFiveLateDeliveries(Driver driver) {
+        return driver.getNumberOfLateDeliveries() > 5;
+    }
+}
+```
+
+after
+
+```java
+public class Rating {
+    public int rating(Driver driver) {
+        return driver.getNumberOfLateDeliveries() > 5 ? 2 : 1;
+    }
+}
+```
+
 ### 클래스 인라인
+- 리팩토링을 하는 중에 클래스의 책임을 옮기다보면 클래스의 존재 이유가 빈약해지는 경우가 발생할 수 있다.
+
+before
+
+```java
+public class TrackingInformation {
+    private String shippingCompany;
+    private String trackingNumber;
+
+    public TrackingInformation(String shippingCompany, String trackingNumber) {
+        this.shippingCompany = shippingCompany;
+        this.trackingNumber = trackingNumber;
+    }
+
+    public String display() {
+        return this.shippingCompany + ": " + this.trackingNumber;
+    }
+
+    public String getShippingCompany() {
+        return shippingCompany;
+    }
+
+    public void setShippingCompany(String shippingCompany) {
+        this.shippingCompany = shippingCompany;
+    }
+
+    public String getTrackingNumber() {
+        return trackingNumber;
+    }
+
+    public void setTrackingNumber(String trackingNumber) {
+        this.trackingNumber = trackingNumber;
+    }
+}
+
+public class Shipment {
+    private TrackingInformation trackingInformation;
+
+    public Shipment(TrackingInformation trackingInformation) {
+        this.trackingInformation = trackingInformation;
+    }
+
+    public TrackingInformation getTrackingInformation() {
+        return trackingInformation;
+    }
+
+    public void setTrackingInformation(TrackingInformation trackingInformation) {
+        this.trackingInformation = trackingInformation;
+    }
+
+    public String getTrackingInfo() {
+        return this.trackingInformation.display();
+    }
+}
+```
+
+after
+
+```java
+public class Shipment {
+    private String shippingCompany;
+    private String trackingNumber;
+
+    public Shipment(String shippingCompany, String trackingNumber) {
+        this.shippingCompany = shippingCompany;
+        this.trackingNumber = trackingNumber;
+    }
+
+    public String getTrackingInfo() {
+        return this.shippingCompany + ": " + this.trackingNumber;
+    }
+
+    public String getShippingCompany() {
+        return shippingCompany;
+    }
+
+    public void setShippingCompany(String shippingCompany) {
+        this.shippingCompany = shippingCompany;
+    }
+
+    public String getTrackingNumber() {
+        return trackingNumber;
+    }
+
+    public void setTrackingNumber(String trackingNumber) {
+        this.trackingNumber = trackingNumber;
+    }
+}
+```
