--- a/refactoring/기본형집착.md
+++ b/refactoring/기본형집착.md
@@ -191,3 +191,89 @@ public class Salesman extends Employee{
 ```
 
 ### 조건부 로직을 다형성으로 바꾸기
+- swich 문을 사용해서 타입에 따라 각기 다른 로직을 사용하는 코드에 사용할 수 있다. 
+- 복잡한 조건문을 다형성을 활용해 좀 더 나은 코드로 만들 수 있는 경우에만 적용한다.
+
+```java
+public class Employee {
+    private String type;
+    private List<String> availableProjects;
+
+    public Employee(String type, List<String> availableProjects) {
+        this.type = type;
+        this.availableProjects = availableProjects;
+    }
+
+    public int vacationHours() {
+        return switch (type) {
+            case "full-time" -> 120;
+            case "part-time" -> 80;
+            case "temporal" -> 32;
+            default -> 0;
+        };
+    }
+
+    public boolean canAccessTo(String project) {
+        return switch (type) {
+            case "full-time" -> true;
+            case "part-time", "temporal" -> this.availableProjects.contains(project);
+            default -> false;
+        };
+    }
+}
+```
+
+```java
+public abstract class Employee {
+    private String type;
+    protected List<String> availableProjects;
+
+    public Employee(String type, List<String> availableProjects) {
+        this.type = type;
+        this.availableProjects = availableProjects;
+    }
+
+    public Employee(List<String> availableProjects) {
+        this.availableProjects = availableProjects;
+    }
+
+    public abstract int vacationHours();
+
+    public boolean canAccessTo(String project) {
+        return this.availableProjects.contains(project);
+    }
+}
+
+public class FullTimeEmployee extends Employee{
+    public FullTimeEmployee(List<String> availableProjects) {
+        super(availableProjects);
+    }
+
+    @Override
+    public int vacationHours() {
+        return 120;
+    }
+}
+
+public class ParttimeEmployee extends Employee{
+    public ParttimeEmployee(List<String> availableProjects) {
+        super(availableProjects);
+    }
+
+    @Override
+    public int vacationHours() {
+        return 80;
+    }
+}
+
+public class TemperaolEmployee extends Employee{
+    public TemperaolEmployee(List<String> availableProjects) {
+        super(availableProjects);
+    }
+
+    @Override
+    public int vacationHours() {
+        return 32;
+    }
+}
+```
