--- a/refactoring/중재자.md
+++ b/refactoring/중재자.md
@@ -104,3 +104,134 @@ public class Scroll{
 ```
 
 ### 서브 클래스를 위임으로 바꾸기
+- 어떤 객체의 행동이 카테고리에 따라 바뀐다면, 보통 상속을 사용해서 일반적인 로직은 슈퍼클래스에 두고 특이한 케이스의 로직을 서브클래스를 사용해 표현한다.
+- 하지만, 대부분의 프로그래밍 언어에서 상속은 오직 한번만 사용할 수 있다. 
+- 위임을 사용하면 얼마든지 여러가지 이유로 여러 다른 객체로 위임을 할 수 있다. 
+- 슈퍼클래스가 바뀌면 모든 서브클래스에 영향을 줄 수 있다. 따라서 슈퍼클래스를 변경할 때 서브클래스까지 신경써야 한다. 
+- 위임을 사용한다면 중간에 인터페이스를 만들어 의존성을 줄일 수 있다. 
+- 처음엔 상속을 적용하고 언제든지 이런 리팩토링을 사용해 위임으로 전환할 수 있다.
+
+before
+
+```java
+public class Booking {
+    protected Show show;
+    protected LocalDateTime time;    
+    protected PremiumDelegate premiumDelegate;
+
+    public Booking(Show show, LocalDateTime time) {
+        this.show = show;
+        this.time = time;
+    }
+    
+    public static Booking createBooking(Show show, LocalDateTime time){
+        return new Booking(show, time);        
+    }
+    public static Booking createPremiumBooking(){}
+
+    public boolean hasTalkback() {
+        return this.show.hasOwnProperty("talkback") && !this.isPeakDay();
+    }
+
+    protected boolean isPeakDay() {
+        DayOfWeek dayOfWeek = this.time.getDayOfWeek();
+        return dayOfWeek == DayOfWeek.SATURDAY || dayOfWeek == DayOfWeek.SUNDAY;
+    }
+
+    public double basePrice() {
+        double result = this.show.getPrice();
+        if (this.isPeakDay()) result += Math.round(result * 0.15);
+        return result;
+    }
+}
+
+//상속을 이용해서 기능들을 구현현
+public class PremiumBooking extends Booking {
+    private PremiumExtra extra;
+
+    public PremiumBooking(Show show, LocalDateTime time, PremiumExtra extra) {
+        super(show, time);
+        this.extra = extra;
+    }
+
+    @Override
+    public boolean hasTalkback() {
+        return this.show.hasOwnProperty("talkback");
+    }
+
+    @Override
+    public double basePrice() {
+        return Math.round(super.basePrice() + this.extra.getPremiumFee());
+    }
+
+    public boolean hasDinner() {
+        return this.extra.hasOwnProperty("dinner") && !this.isPeakDay();
+    }
+}
+```
+
+after - 슈퍼클래스에서 기능들을 위임받아 구현
+
+```java
+public class Booking {
+    protected Show show;
+
+    protected LocalDateTime time;
+    protected PremiumDelegate premiumDelegate;
+
+    public Booking(Show show, LocalDateTime time) {
+        this.show = show;
+        this.time = time;
+    }
+
+    public static Booking createBooking(Show show, LocalDateTime time){
+        return new Booking(show, time);
+    }
+    public static Booking createPremiumBooking(Show show, LocalDateTime time, PremiumExtra extra){
+        Booking booking = createBooking(show, time);
+        booking.premiumDelegate = new PremiumDelegate(booking, extra);
+        return booking;
+    }
+
+    public boolean hasTalkback() {
+        return this.premiumDelegate != null  ?
+                this.premiumDelegate.hasTalkBack() : this.show.hasOwnProperty("talkback") && !this.isPeakDay();
+    }
+
+    protected boolean isPeakDay() {
+        DayOfWeek dayOfWeek = this.time.getDayOfWeek();
+        return dayOfWeek == DayOfWeek.SATURDAY || dayOfWeek == DayOfWeek.SUNDAY;
+    }
+
+    public double basePrice() {
+        double result = this.show.getPrice();
+        if (this.isPeakDay()) result += Math.round(result * 0.15);
+        return this.premiumDelegate != null ? this.premiumDelegate.extendBasePrice(result) : result;
+    }
+
+    public boolean hasDinner() {
+        return this.premiumDelegate != null && this.premiumDelegate.hasDinner();
+    }
+}
+
+public class PremiumDelegate {
+    private Booking host;
+    private PremiumExtra extra;
+
+    public PremiumDelegate(Booking host, PremiumExtra extra) {
+        this.host = host;
+        this.extra = extra;
+    }
+    public boolean hasTalkBack(){
+        return this.host.show.hasOwnProperty("talkBack");
+    }
+
+    public double extendBasePrice(double result){
+        return Math.round(result + this.extra.getPremiumFee());
+    }
+
+    public boolean hasDinner() {
+        return this.extra.hasOwnProperty("dinner") && !this.host.isPeakDay();
+    }
+}
+```
