--- a/DDD/1장.md
+++ b/DDD/1장.md
@@ -55,3 +55,202 @@ public enum OrderState{
 - 그러므로 완벽한 개념 모델을 만들기보다는 전반적인 개요를 알 수 있는 수준으로 개념모델을 작성하여야 한다.
 
 ### 도메인 모델 도출
+- 모델링시 핵심 구성요소, 규칙, 기능을 파악이 필요하다.
+
+ex) 
+- 한 상품을 한 개 이상 구매할 수 있다.
+- 각 상품 구매가격의 합은 (상품 가격 x  개수)
+
+```java
+public class OrderLine {    
+    private Product product;//상품
+    private Money price;//가격
+    private Money amounts; //총 수량
+    private int quantity; //양
+
+    public OrderLine(ProductId productId, Money price, int quantity) {
+        this.productId = productId;
+        this.price = price;
+        this.quantity = quantity;
+        this.amounts = calculateAmounts();
+    }
+
+    private Money calculateAmounts() {
+        return price.multiply(quantity);
+    }
+
+    public Money getAmounts() {
+        return amounts;
+    }
+}
+```
+
+- 가격, 개수, 상품의 정보가 필요하다.
+- 한 개 이상의 상품을 주문할 수 있으므로, OrderLine의 상위 도메인 Order에서는 Orderline을 List로 구현한다.
+
+```java
+public class Order {
+    private List<OrderLine> orderLines;
+    private Money totalAmounts;
+
+    public Order(List<OrderLine> orderLines,) {
+        verifyAtLeastOneOrMoreOrderLines(orderLines);
+        this.orderLines = orderLines;
+        calculateTotalAmounts();
+    }
+
+    private void verifyAtLeastOneOrMoreOrderLines(List<OrderLine> orderLines) {
+        if (orderLines == null || orderLines.isEmpty()) {
+            throw new IllegalArgumentException("no OrderLine");
+        }
+    }
+
+    private void calculateTotalAmounts() {
+        this.totalAmounts = new Money(orderLines.stream()
+                .mapToInt(x -> x.getAmounts().getValue()).sum());
+    }
+}
+```
+
+- verifyAtLeastOneOrMoreOrderLines 메서드를 통해 제약조건인 한 개 이상의 OrderLine을 검사한다.
+
+### 엔티티와 벨류
+엔티티란?
+- 식별자를 가진다. 엔티티의 식별자는 바뀌지 않는 값이다.
+- ex) 주문의 주문번호
+- 식별자는 보통 다음과 같은 방식으로 생성한다.
+
+```
+특정 규칙에 따라 생성한다.
+UUID, NANO ID와 같은 고유 식별자를 사용
+값을 직접 입력(아이디, 이메일)
+일련번호를 사용(DB 자동증가 컬럼이나 SEQUENCE)
+```
+
+벨류란?
+1. 개념적으로 완전한 하나를 표현할때 사용한다.
+ex) 다음과같이 배송과 관련된 도메인이 있다.
+```java
+public class ShippingInfo {
+    //분리할 부분 - Start
+    private String receiverName; //받는 사람
+    private String receiverPhoneNumber; //받는사람 휴대폰 번호
+    //분리할 부분 - End
+    //분리할 부분 - Start
+    private Address address; //받는사람 주소
+    private String zipcode; //받는사람 우편번호
+    //분리할 부분 - End
+}
+```
+- 다음과같이 받는사람, 주소로 개념적으로 완전한 하나를 명확하게 표현할 수 있다.
+```java
+public class ShippingInfo {
+    private Receiver receiver;
+    private Address address;
+}
+
+public class Receiver {
+    private String name; //받는 사람
+    private String phoneNumber; //받는사람 휴대폰 번호
+}
+```
+2. 반드시 두 개 이상의 데이터를 가질 필요는 없다.
+- 다음과 같이 명확하게 금액을 클래스의 이름으로 명시한다.
+```java
+public class Money {    
+    private int value;//가격
+}
+```
+- Money 타입덕에 OrderLine의 price, amounts는 돈과 관련이 있다는것을 알 수 있다.
+```java
+public class OrderLine {    
+    private Product product;//상품
+    private Money price;//가격
+    private Money amounts; //총 수량
+    private int quantity; //양
+}
+```
+3. 벨류 타입만을 위한 기능을 추가할 수 있다.
+- 아래 예제를 통해 Money라는 벨류타입 내부에서 정수 타입 연산이 아닌, 돈 계산이라는 명확한 역할 부여가 가능해진다.
+```java
+public class Money {
+    private int value;
+
+    public Money multiply(int multiplier) {
+        return new Money(value * multiplier);
+    }
+}
+```
+4. 데이터 변경시에는 setter와 같은 수정보다는 새로운 객체를 만드는 방식을 선호한다.
+- 이를 불변타입이라고 한다.
+- 참조에 투명하고, thread safe한 특성이 있음
+- 안전하게 데이터를 전달할 수 있어야하기 때문
+```java
+public class Money {
+    private int value;
+
+    public Money add(Money money) {
+        return new Money(this.value + money.value);
+    }
+```
+5. 식별자는 단순한 문자열이 아니므로, 특정한 객체로 분리해도 좋다.
+- 보통 식별자의 데이터는 String 문자열로 구성된 경우가 많다.
+```java
+public class Order {
+    //타입 자체로 식별자라는것을 명확하게 알 수 있다.
+    private OrderNo id;
+}
+```
+6. setter는 도메인 모델의 핵심 개념이나 의도를 불분명하게 한다.
+- setter를 통해 불완전한 상태를 넘기기보다 생성자를 통해 필요한 데이터를 모두 넣어주는 방식을 택하자
+- set을 사용한 예시
+```java
+public class Order {
+    private OrderNo number;
+    private Orderer orderer;
+    private List<OrderLine> orderLines;
+    private Money totalAmounts;
+    private OrderState state;
+    private LocalDateTime orderDate;
+
+    public Order(OrderNo number, Orderer orderer, List<OrderLine> orderLines, OrderState state) {
+        setNumber(number);
+        setOrderer(orderer);
+        setOrderLines(orderLines);
+        this.state = state;
+        this.orderDate = LocalDateTime.now();
+    }
+
+    private void setNumber(OrderNo number) {
+        if (number == null) throw new IllegalArgumentException("no number");
+        this.number = number;
+    }
+
+    private void setOrderer(Orderer orderer) {
+        if (orderer == null) throw new IllegalArgumentException("no orderer");
+        this.orderer = orderer;
+    }
+
+    private void setOrderLines(List<OrderLine> orderLines) {
+        verifyAtLeastOneOrMoreOrderLines(orderLines);
+        this.orderLines = orderLines;
+        calculateTotalAmounts();
+    }
+
+    private void verifyAtLeastOneOrMoreOrderLines(List<OrderLine> orderLines) {
+        if (orderLines == null || orderLines.isEmpty()) {
+            throw new IllegalArgumentException("no OrderLine");
+        }
+    }
+
+    private void calculateTotalAmounts() {
+        this.totalAmounts = new Money(orderLines.stream()
+                .mapToInt(x -> x.getAmounts().getValue()).sum());
+    }
+}
+```
+- private라는 접근지시자를 통해 외부에서 데이터를 수정할 목적으로 set을 사용할 수 없다.
+- 불변타입의 장점을 최대한 살린다.
+
+### 도메인 용어와 유비쿼터스 언어
+도메인 용어에 알맞은 단어를 찾는 시간을 아까워 하지 말자!!!
