--- a/DDD/2장.md
+++ b/DDD/2장.md
@@ -1,2 +1,47 @@
 # 아키텍처 개요
 ### 네개의 영역
+- presentation layer: http 요청을 application layer에서 원하는 형식으로 변환해 전달하는 역할을 하는 곳
+- application layer: 사용자에게 제공할 기능을 구현하는 곳
+- domain layer: application에서는 상세한 내용을 domain에 위임하여 구현하도록 함, domain의 핵심 로직을 구현하는 곳
+- infra layer: 구현 기술과 관련있는 부분(RDBMS 등)
+
+### 계층 구조 아키텍처
+- (상위 계층)presentation layer -> application layer -> domain layer ->  infra layer(하위 계층)
+- 상위 계층에서 하위계층으로의 의존만 존재
+- 구현의 편리함을 위해 계층구조를 유연하게 가져가기도 함(application layer에서 infra layer 의존)
+- 하지만 infra layer에 의존하면 '테스트 어려움', '기능 확장의 어려움'이 존재한다.
+- 해결을 위해 DIP를 적용한다.
+
+### DIP(의존 역전의 원칙)
+```
+고수준 모듈               저수준 모듈
+가격할인 로직      |      JPA를 이용하여 구한다.
+가격할인 로직      |      My Batis를 이용하여 구한다.
+```
+- 고수준 모듈이 정상적으로 동작하기 위해서는 저수준 모듈을 사용해야 한다.
+- '테스트 어려움', '기능 확장의 어려움'의 문제가 발생하므로 이를 해결하기위해 DIP를 적용한다.
+- 추상화 한 인터페이스를 사용한다.
+```java
+public interface RuleDiscounter{
+    Money applyRules(Customer customer, List<OrderLine> orderLines);
+}
+```
+- 인터페이스를 상속받아 저수준 모듈인 RuleDiscounter를 마음껏 구현하면 된다.
+- 고수준 모듈에서는 추상화 된 모듈을 사용하면 된다. 
+```java
+public class CalculateDiscountService{
+    private RuleDiscounter ruleDiscounter;
+
+    public CalculateDiscountService(RuleDiscounter ruleDiscounter){
+        this.ruleDiscounter = ruleDiscounter;
+    }
+    
+    public Money calculateDiscount(List<OrderLine> orderLines, String customerId){
+        Customer customer = findCustomer(customerId);
+        return ruleDiscounter.applyRules(customer, orderLines);
+    }
+}
+```
+- 주의사항
+```java
+```
