--- a/DDD/2장.md
+++ b/DDD/2장.md
@@ -43,5 +43,66 @@ public class CalculateDiscountService{
 }
 ```
 - 주의사항
-```java
+- 하위 기능을 추상화 한 인터페이스는 고수준 모듈 관점에서 도출해야한다.
 ```
+올바르지 않은 dip 예시
+도메인                           | 인프라
+calculateDiscountService(class)  | ruleEngine(interface)
+                                 | droolsRuleEngine(구체 class)
+
+올바른 dip 예시
+도메인                           | 인프라
+calculateDiscountService(class)  | 
+ruleEngine(interface)            | droolsRuleEngine(구체 class)
+```
+- 할인 금액을 구한다는 역할을 하는 인터페이스는 인프라, 즉 저수준이 아닌 고수준 모듈에 위치해야 한다.
+
+```
+이렇게 구현한 DIP에서는 infra structure 부분의 변경이 일어날때, domain과 application에 영향을 주지 않는다.
+```
+
+### 도메인 영역의 주요 구성요소
+
+|요소|설명|예시|
+|---|---|---|
+|entity|고유의 식별자를 갖는 객체. 도메인 모델의 데이터를 포함하며 해당 데이터와 관련된 기능을 함께 제공한다.|주문,상품|
+|value|고유의 식별자를 갖지 않는 객체. 하나의 개념을 표현하며 entity의 속성으로 사용되기도 한다.|가격정보,주소정보|
+|aggregate|연관된 entity, value를 개념적으로 묶은것|orderEntity, orderValue, orderLineValue를 aggregate로 묶을 수 있다.|
+|repository|도메인 모델의 영속성을 처리.|DMBS에서 객체를 가져오거나 저장|
+|domain service|특정 enttiy에 속하지 않은 도메인 로직을 제공|주문, 상품, 쿠폰 등에서 공통으로 사용하는 할인금액 계산|
+
+DB 테이블의 entity와 domain model의 enttiy의 차이
+1. domain model의 enttiy는 도메인 기능을 함께 제공(주문의 entity는 배송과 관련된 주소정보의 기능도 제공)
+2. 데이터를 단순히 담고있을뿐아니라 데이터와 함께 기능을 제공한다.
+3. value 타입을 DB테이블의 entity에서는 제대로 표현하기 힘들다.
+```java
+public class Order{
+    private OrderNumber orderNumber;
+    Orderer orderer;
+    Product product;
+}
+
+public class Orderer{
+    private String name;
+    private String email;
+}
+```
+위의 Orderer를 DB에서 표현하려면 어떻게 해야할까?
+```
+orderer                          | order
+order_number:varchar2(fk)        | number:varchar2
+orderer_name:varchar2            | name:varchar2
+orderer_email:varchar2           | email:varchar2
+```
+위와같이 테이블을 분리해서 저장해야된다.
+
+Aggregate
+- 도메인이 커질수록 더 많은 entity와 value가 출현한다.
+- 도메인 모델에서 전체 구조를 이해하는데 도움이 되는것이 이 aggreagate이다.
+- 예시로 주문이 있는데, '배송지 정보', '상품', '주문자', '주문 목록'이 하위 모델로된 aggregate로 볼 수 있다.
+- 구현과 트랜잭션의 복잡도를 고려하며 구성에 신경써야한다.
+
+Repository
+- 도메인 객체를 지속적으로 사용하려면 RDBMS, file과 같은 물리적인 저장이 필요하다.
+- aggregate 단위로 도메인 객체를 저장하고 조회하는 기능을 정의
+
