--- a/DDD/2장.md
+++ b/DDD/2장.md
@@ -45,6 +45,7 @@ public class CalculateDiscountService{
 - 주의사항
 - 하위 기능을 추상화 한 인터페이스는 고수준 모듈 관점에서 도출해야한다.
 ```
+예시)
 올바르지 않은 dip 예시
 도메인                           | 인프라
 calculateDiscountService(class)  | ruleEngine(interface)
@@ -104,5 +105,20 @@ Aggregate
 
 Repository
 - 도메인 객체를 지속적으로 사용하려면 RDBMS, file과 같은 물리적인 저장이 필요하다.
-- aggregate 단위로 도메인 객체를 저장하고 조회하는 기능을 정의
+- aggregate 단위로 도메인 객체를 저장하고 조회하는 기능을 정의한다.
+
+### 요청 처리 흐름
+<img src="https://github.com/hanuk96/TIL/assets/12428689/7dacfd3f-f5e1-4dda-bf98-8e649fda3cdc" width="600" height="400">
+
+### 인프라 스트럭쳐
+- presentation, application, domain 영역을 보조하는 역할을 한다.
+- 직접 infra structure의 기능을 이용하게끔 하기보다, application, domain영역에서 인터페이스 정의 후 infra structure에서 구현하도록 하는게 유연하고 테스트 용이한 구조를 만들어준다.
+- 하지만 무조건적으로 의존을 없앨 필요는 없다.
+- spring에서의 @Transactional과 같이 구현의 편리함을 주는 기능등은 적극 이용하자
+
+### 모듈 구성
+- 모듈 구조를 얼마나 세분화 해야하는지에 대해 정해진 규칙은 없다. 한 페이지에 너무 많은 일이 몰리지만 않으면 된다 생각한다.
+- 한 패키지에 10 ~ 15개정도의 class가 존재하면 분리를 고려해보자.
+<img src="https://github.com/hanuk96/TIL/assets/12428689/6657d974-b52e-48a2-84c7-ad6907e8f37e" width="600" height="400">
+
 
