--- a/DDD/3장.md
+++ b/DDD/3장.md
@@ -1,4 +1,14 @@
 # 애그리거트(Aggregate)
 - 복잡한 도메인을 이해하고 관리하기 쉬운 단위로 만드는 방법
 - 상위 수준에서 전반적인 모델의 관계를 파악할 수 있게해준다.
-- 
+- 한 aggregate의 구성요소는 함께 생성되고 함께 제거한다.
+- 한 aggregate에 속한 객체는 다른 aggregate에 속하지 않는다.
+
+### aggregate root
+```
+Order entity의 필드: 총 금액인 totalAmounts
+OrderLine enttiy의 필드: 금액 price, 수량 quantity
+```
+- OrderLine의 개수가 바뀌면 Order에도 영향이 있다.
+- aggregate에 속한 객체가 일관된 상태를 유지하기 위해 root entity가 필요하다.
+- 위의 예제에서는 Order가 root entity가 된다.
