--- a/DDD/3장.md
+++ b/DDD/3장.md
@@ -154,3 +154,6 @@ public class ChangeOrderService{
 - 객체의 영속성을 표현하는 repository는 aggregate 단위로 존재한다.
 - 예를들어, Order와 OrderLine이 각각 별도의 DB 테이블에 저장한다고해서 각각의 repository를 만들지 않는다.
 - Order가 root고 OrderLine이 root에 속하는 구성요소이므로 Order를 위한 repository만 존재한다.
+- aggregate는 개념적으로 하나이므로 repository는 aggregate 전체를 저장소에 영속화해야한다.
+- ex) Order와 관련된 table이 세개라면 Order aggregate를 저장할때 모든 테이블에 데이터를 저장해야한다.
+- 
